Pushing week 5 updates to my branch.
